Wed Aug  2 15:14:51 2000  Christopher Faylor <cgf@cygnus.com>

	* strace.cc (strace::prntf): Make second argument the function name,
	rather than use special format options.
	(strace::vprntf): Ditto.
	(getfunc): New function.
	* include/sys/strace.h: Reflect above changes.
	* smallprint.c (__small_vsprintf): Eliminate '%F' formatting.
	* pinfo.cc (set_myself): Modify for new strace::prntf parameter.
	* errno.cc (seterrno_from_win_error): Ditto.
	* fhandler_tty.cc (fhandler_tty_common::__acquire_output_mutex): Ditto.
	* fhandler_tty.cc (fhandler_tty_common::__release_output_mutex): Ditto.

Wed Aug  2 13:20:04 2000  Christopher Faylor <cgf@cygnus.com>

	* regexp/regexp.c: Add winsup.h.

2000-08-02  DJ Delorie  <dj@redhat.com>

	* winsup.h: take out protections of environ, errno, allow C use
	* *.cc: put winsup.h before other headers (for __INSIDE_CYGWIN__);
	use cur_environ() instead of just environ
	* times.cc: remove import protections
	* glob.c: add winsup.h
	* localtime.c: ditto
	* smallprint.c: ditto
	* Makefile.in: don't __INSIDE_CYGWIN__ as it messes up profiling.
	
Wed Aug  2 11:22:53 2000  Christopher Faylor <cgf@cygnus.com>

	* include/sys/strace.h: Fix strace definition.

Tue Aug  1 23:37:08 2000  Christopher Faylor <cgf@cygnus.com>

	* strace.h: Add kludgy workarounds to avoid using deprecated methods
	for variable argument macros when possible.
	* sigproc.cc: Throughout, use sigproc_printf rather than sip_printf.
	* strace.cc (strace::prntf): Remove 'active' check, since callers are
	supposed to ensure this.
	(__system_printf): Remove.  Subsumed by strace::prntf.
	* winsup.h: Define "NEW_MACRO_VARARGS" to indicate when to use new
	macro varargs capability.

Sun Jul 30 13:54:35 2000  Christopher Faylor <cgf@cygnus.com>

	* fhandler_console.cc: Remove VK_DIVIDE detection.
	(get_nonascii_key): Simplify previous patch to return ascii char if it
	is non-zero.  Add a second "temporary buffer" argument to help with
	thread safety.